--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
 		"clsx": "^2.1.1",
 		"drizzle-kit": "^0.31.4",
 		"lucide-svelte": "^0.510.0",
+		"mode-watcher": "^1.0.8",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-sonner": "^1.0.5",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^4.0.0",
@@ -50,6 +52,8 @@
 		"@tailwindcss/vite": "^4.1.11",
 		"dotenv": "^17.0.1",
 		"drizzle-orm": "^0.44.2",
-		"tailwindcss": "^4.1.11"
+		"tailwindcss": "^4.1.11",
+		"trelae-files": "^0.1.1",
+		"zod": "^3.25.75"
 	}
 }
