--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
 		"@auth/sveltekit": "^1.10.0",
 		"@neondatabase/serverless": "^1.0.1",
 		"@tailwindcss/vite": "^4.1.11",
+		"bcryptjs": "^3.0.2",
 		"dotenv": "^17.0.1",
 		"drizzle-orm": "^0.44.2",
+		"jose": "^6.0.11",
 		"tailwindcss": "^4.1.11",
 		"trelae-files": "^0.1.1",
 		"zod": "^3.25.75"
