--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 AUTH_SECRET=any-random-long-secret
 AUTH_ORIGIN=http://localhost:5173
+AUTH_TRUST_HOST=true
