updated the env example

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@ GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 AUTH_SECRET=any-random-long-secret
 AUTH_ORIGIN=http://localhost:5173
+PUBLIC_TRELAE_API_KEY=tr_asdgjahsgdaasdasdasd
 AUTH_TRUST_HOST=true
